2010-08-31  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_error.c: 
	Updated (c) years to include 2010
	New error code: XNEE_CLI_ERROR
	
	* libxnee/src/xnee_expr.c: 
	Merged xinput-2 branch

	* libxnee/src/xnee_fake.c: 
	Merged xinput-2 branch

	* libxnee/src/xnee_range.c: 
	Merged xinput-2 branch

	* libxnee/src/xnee_replay.c: 
	Merged xinput-2 branch

	* libxnee/src/xnee_session.c: 
	Merged xinput-2 branch

	* libxnee/src/xnee_utils.c (xnee_check_true): 
	New funs: xnee_check_true, xnee_check_false

	* libxnee/src/xnee_strings.c: 
	Updated (c) years to include 2010
	Added string containing name of xinput extension

	* libxnee/src/xnee_record.c (xnee_unsetup_recording): 
	Merged xinput-2 branch

	* libxnee/include/libxnee/xnee.h (struct): 
	Merged xinput-2 branch

2010-08-31  Henrik Sandklef  <hesa@sandklef.com>

	BRANCH: xinput-2 branch

	* cnee/src/parse.c: 
	* cnee/include/parse.h: 
	Updated (c) years to include 2010
	Added option   "--disable-xinput-events"

	* libxnee/src/Makefile.am: 
	Added files: src/xnee_xinput.c include/libxnee/xnee_xinput.c 

	* libxnee/src/xnee_expr.c: 
	Added support for managing xinput events	
	Updated (c) years to include 2010

	* libxnee/src/xnee_fake.c: 
	Added support for faking xinput events	
	Updated (c) years to include 2010

	* libxnee/src/xnee_range.c: 
	Add static to add_to_list2
	Updated (c) years to include 2010

	* libxnee/src/xnee_record.c: 
	Moved xinput funationality to file: xnee_xinput

	* libxnee/src/xnee_replay.c: 
	Skeleton code for replaying XInput device events

	* libxnee/src/xnee_session.c: 
	Using Xnee's Xinput API to disable Xinput by default

	* libxnee/src/xnee_setget.c: 
	Moved xinput funationality to file: xnee_xinput

	* libxnee/src/xnee_utils.c: 
	Moved xinput funationality to file: xnee_xinput

	* libxnee/include/libxnee/xnee.h: 
	Added variables to keep info on whether to record xi mouse/kbd or not

	* libxnee/include/libxnee/xnee_fake.h: 	
	Added support for faking xinput events	
